fixed overflow-x from animation on hero and process section

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+::-webkit-scrollbar {
+  width: 0;
+  scrollbar-width: none;
+}
 body {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   box-sizing: border-box;
+  /* background: #000; */
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 @layer utilities {
